--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,14 @@ pandas
 textblob
 nltk
 emoji
+numpy 
+scikit-learn 
+Flask 
+gunicorn
+Jinja2
+itsdangerous
+MarkupSafe
+Werkzeug
+xgboost
+imblearn 
+pandas
